--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 
             <article class="main-project-card">
                 <h4>Projet 1</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
-                <ul class="projects-actions">
+                <p class="right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
+                <ul class="projects-actions right">
                         <li>
                             <a href="#">
                                 <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com.">
@@ -96,8 +96,8 @@
                             </a>
                         </li>
                 </ul>
-                <div class="project-img"></div>
-                <ul class="skills-list">
+                <div class="project-img img1"></div>
+                <ul class="skills-list right">
                     <li>html</li>
                     <li>css</li>
                     <li>js</li>
@@ -108,18 +108,18 @@
 
             <article class="main-project-card">
                 <h4>Projet 1</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
-                <div class="project-img">
+                <p class="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
+                <div class="project-img img2">
                     <img src="assets/images/Screenshot 2024-03-27 at 19.41.21.png" alt="">
                 </div>
-                <ul class="skills-list">
+                <ul class="skills-list left">
                     <li>html</li>
                     <li>css</li>
                     <li>js</li>
                     <li>php</li>
                     <li>api</li>
                 </ul>
-                <ul class="projects-actions">
+                <ul class="projects-actions left">
                     <li>
                         <a href="#">
                             <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com.">
