fixed overflow issue

--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
             <h1 class="hidden">Blanche Peltier</h1>
             <img src="assets/images/Logo.svg" alt="Logo de Blanche Peltier.">
         </div>
-        <nav class="hidden">
+        <nav class="">
             <ul>
                 <li><a href="#course">Formation</a></li>
                 <li><a href="#projects">Projets</a></li>
                 <li><a href="#">Contact</a></li>
+                <li class="button"><a href="#">CV</a></li>
             </ul>
         </nav>
-        <img class="hidden" src="assets/images/icons/solar_menu-dots-broken.svg" alt="">
+        <a href="javascript:void(0);" class="navButton" id="navButtonOpen">
+            <img src="assets/images/icons/solar_menu-dots-broken.svg" alt="Menu de navigation.">
+        </a>
     </header>
     
     <main>
@@ -109,9 +112,7 @@
             <article class="main-project-card">
                 <h4>Projet 1</h4>
                 <p class="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
-                <div class="project-img img2">
-                    <img src="assets/images/Screenshot 2024-03-27 at 19.41.21.png" alt="">
-                </div>
+                <div class="project-img img2"></div>
                 <ul class="skills-list left">
                     <li>html</li>
                     <li>css</li>
@@ -146,22 +147,19 @@
                         <li>php</li>
                         <li>api</li>
                     </ul>
-                    <menu class="projects-actions">
-                        <ul>
-                            <li>
-                                <a href="#">
-                                    <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com.">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="assets/images/icons/open-window.svg" alt="Lien vers le site du projet.">
-                                </a>
-                            </li>
-                        </ul>
-                    </menu>
+                    <ul class="projects-actions">
+                        <li>
+                            <a href="#">
+                                <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com.">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="assets/images/icons/open-window.svg" alt="Lien vers le site du projet.">
+                            </a>
+                        </li>
+                    </ul>
                 </article>
-
                 <article class="project-card">
                     <h5>Projet 1</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
@@ -172,22 +170,19 @@
                         <li>php</li>
                         <li>api</li>
                     </ul>
-                    <menu class="projects-actions">
-                        <ul>
-                            <li>
-                                <a href="#">
-                                    <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com.">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="assets/images/icons/open-window.svg" alt="Lien vers le site du projet.">
-                                </a>
-                            </li>
-                        </ul>
-                    </menu>
+                    <ul class="projects-actions">
+                        <li>
+                            <a href="#">
+                                <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com.">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="assets/images/icons/open-window.svg" alt="Lien vers le site du projet.">
+                            </a>
+                        </li>
+                    </ul>
                 </article>
-
                 <article class="project-card">
                     <h5>Projet 1</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
@@ -198,20 +193,18 @@
                         <li>php</li>
                         <li>api</li>
                     </ul>
-                    <menu class="projects-actions">
-                        <ul>
-                            <li>
-                                <a href="#">
-                                    <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com.">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="assets/images/icons/open-window.svg" alt="Lien vers le site du projet.">
-                                </a>
-                            </li>
-                        </ul>
-                    </menu>
+                    <ul class="projects-actions">
+                        <li>
+                            <a href="#">
+                                <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com.">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="assets/images/icons/open-window.svg" alt="Lien vers le site du projet.">
+                            </a>
+                        </li>
+                    </ul>
                 </article>
             </section>
         </section>
