--- a/index.html
+++ b/index.html
@@ -6,25 +6,24 @@
     <title>Blanche Peltier</title>
     <link rel="stylesheet" href="assets/style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script type="module" src="assets/js/main.js"></script>
 </head>
 <body>
 
     <header>
         <div class="title">
-            <h1 class="hidden">Blanche Peltier</h1>
+            <h1 class="hidden">Blanche Peltier - Portfolio </h1>
             <img src="assets/images/Logo.svg" alt="Logo de Blanche Peltier.">
         </div>
-        <nav class="">
+        <nav id="nav">
             <ul>
                 <li><a href="#course">Formation</a></li>
                 <li><a href="#projects">Projets</a></li>
                 <li><a href="#">Contact</a></li>
-                <li class="button"><a href="#">CV</a></li>
+                <li class="cvLink"><a href="#">CV</a></li>
             </ul>
         </nav>
-        <a href="javascript:void(0);" class="navButton" id="navButtonOpen">
-            <img src="assets/images/icons/solar_menu-dots-broken.svg" alt="Menu de navigation.">
-        </a>
+        <a href="javascript:void(0);" class="navButton close" id="navButton"></a>
     </header>
     
     <main>
@@ -42,6 +41,8 @@
             </ul>
 
             <div class="hero-img"></div>
+
+            <span class="scroll">Scroll</span>
         </section>
         
         <section class="course" id="course">
