mobile mostly done

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#course">Formation</a></li>
                 <li><a href="#projects">Projets</a></li>
                 <li><a href="#">Contact</a></li>
-                <li class="cvLink"><a href="#">CV</a></li>
+                <li class="button cvLink"><a href="#">CV</a></li>
             </ul>
         </nav>
         <a href="javascript:void(0);" class="navButton close" id="navButton"></a>
