revised js & fixed style, mobile is mostly done, to do text and images

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="#course">Formation</a></li>
                 <li><a href="#projects">Projets</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <li class="button cvLink"><a href="#">CV</a></li>
             </ul>
         </nav>
