--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <header>
+    <header class="margin">
         <div class="title">
             <h1 class="hidden">Blanche Peltier - Portfolio </h1>
             <img src="assets/images/Logo.svg" alt="Logo de Blanche Peltier.">
@@ -26,8 +26,8 @@
         <a href="javascript:void(0);" class="navButton close" id="navButton"></a>
     </header>
     
-    <main>
-        <section class="hero">
+    <main class="margin">
+        <section class="layout hero card">
             <p class="body-ft-small">Salut, moi c'est</p>
             <h2>Blanche Peltier</h2>
             <p class="body-ft-small">Je suis</p>
@@ -40,16 +40,16 @@
                 <li><a href="#"><i class="fa-solid fa-envelope fa-xl"></i></a></li>
             </ul>
 
-            <div class="hero-img"></div>
+            <div class="background-image hero-img"></div>
 
-            <span class="scroll">Scroll</span>
+            <span class="scrollText">Scroll</span>
         </section>
         
-        <section class="course" id="course">
+        <section class="layout course" id="course">
             <h3>01. Formation</h3>
             <img src="assets/images/3WA-logo.jpg" alt="Logo de l'école 3W Academy.">
 
-            <section class="course-card">
+            <section class="card course-card">
                 <h4>Développeuse Web Full Stack</h4>
                 <p>Mars 2024 - Mars 2025</p>
                 <p>Deuxième année : Conceptrice d'applications</p>
@@ -57,13 +57,13 @@
                 <p>Rythme: 3 semaines en entreprise / 1 semaine en école</p>
                 <p>Formation éligible à l'Aide Exeptionnelle de 6000€</p>
 
-                <div class="skills">
+                <div class="languages-logos">
                     <img src="assets/images/icons/akar-icons_node-fill.svg" alt="">
                     <img src="assets/images/icons/simple-icons_react.svg" alt="">
                 </div>
             </section>
 
-            <section class="course-card">
+            <section class="card course-card">
                 <h4>Développeuse Web Full Stack</h4>
                 <p>Avril 2023 - Octobre 2023</p>
                 <p>Titre RNCP niveau 5 obtenu</p>
@@ -82,12 +82,12 @@
             </section>
         </section>
 
-        <section class="projects" id="projects">
+        <section class="layout projects" id="projects">
             <h3>02. Quelques créations</h3>
 
-            <article class="main-project-card">
+            <article class="layout main-project-card">
                 <h4>Projet 1</h4>
-                <p class="right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
+                <p class="card right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
                 <ul class="projects-actions right">
                         <li>
                             <a href="#">
@@ -100,7 +100,7 @@
                             </a>
                         </li>
                 </ul>
-                <div class="project-img img1"></div>
+                <div class="background-image project-img img1"></div>
                 <ul class="skills-list right">
                     <li>html</li>
                     <li>css</li>
@@ -110,10 +110,10 @@
                 </ul>
             </article>
 
-            <article class="main-project-card">
+            <article class="layout main-project-card">
                 <h4>Projet 1</h4>
                 <p class="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
-                <div class="project-img img2"></div>
+                <div class="background-image project-img img2"></div>
                 <ul class="skills-list left">
                     <li>html</li>
                     <li>css</li>
@@ -138,7 +138,7 @@
             <section class="more-projects">
                 <h4>Plus de projets</h4>
 
-                <article class="project-card">
+                <article class="card project-card">
                     <h5>Projet 1</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
                     <ul class="skills-list">
@@ -161,7 +161,7 @@
                         </li>
                     </ul>
                 </article>
-                <article class="project-card">
+                <article class="card project-card">
                     <h5>Projet 1</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
                     <ul class="skills-list">
@@ -184,7 +184,7 @@
                         </li>
                     </ul>
                 </article>
-                <article class="project-card">
+                <article class="card project-card">
                     <h5>Projet 1</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
                     <ul class="skills-list">
@@ -210,12 +210,12 @@
             </section>
         </section>
 
-        <section class="contact" id="contact">
+        <section class="layout contact" id="contact">
             <h3>03. Prochaine étape ?</h3>
 
             <p class="body-ft-big">Me contacter</p>
             <p>Je suis actuellement à la recherche d'une altenance.</p>
-            <a class="button" href="mailto:peltierblanche@gmail.com">Envoyer moi un message</a>
+            <a class="button button-contact" href="mailto:peltierblanche@gmail.com">Envoyer moi un message</a>
         </section>
 
     </main>
