fixed html, change nav position top to bottom

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <p>Avril 2023 - Octobre 2023</p>
                 <p>Titre RNCP niveau 5 obtenu</p>
 
-                <div class="skills">
+                <div class="languages-logos">
                     <img src="assets/images/icons/flowbite_html-solid.svg" alt="Logo of HTML language.">
                     <img src="assets/images/icons/flowbite_css-solid.svg" alt="Logo of CSS language.">
                     <img src="assets/images/icons/ri_javascript-fill.svg" alt="Logo of JavaScript language.">
