--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </section>
         
         <section class="layout course" id="course">
-            <h3>01. Formation</h3>
+            <h3><span class="numerotation">01.</span> Formation</h3>
             <img src="assets/images/3WA-logo.jpg" alt="Logo de l'école 3W Academy.">
 
             <section class="card course-card">
@@ -83,7 +83,7 @@
         </section>
 
         <section class="layout projects" id="projects">
-            <h3>02. Quelques créations</h3>
+            <h3><span class="numerotation">02.</span> Quelques créations</h3>
 
             <article class="layout main-project-card">
                 <h4>Projet 1</h4>
@@ -211,7 +211,7 @@
         </section>
 
         <section class="layout contact" id="contact">
-            <h3>03. Prochaine étape ?</h3>
+            <h3><span class="numerotation">03.</span> Prochaine étape ?</h3>
 
             <p class="body-ft-big">Me contacter</p>
             <p>Je suis actuellement à la recherche d'une altenance.</p>
