trying to fix main project card showing under img instead of above

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
 
             <article class="layout main-project-card">
                 <h4>Projet 1</h4>
-                <p class="card right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
+                <div class="card right">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
+                </div>
                 <ul class="projects-actions right">
                         <li>
                             <a href="#">
