still trying to fix main project p

--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
 
             <article class="layout main-project-card">
                 <h4>Projet 1</h4>
-                <p class="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
+                <div class="card left">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
+                </div>
                 <div class="background-image project-img img2"></div>
                 <ul class="skills-list left">
                     <li>html</li>
