added link target & aria label to make them accessible

--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente expedita eaque quas, earum eum nulla iusto aspernatur! Impedit aperiam minima libero necessitatibus alias culpa nemo sapiente et? Quod, aliquam.</p>
 
             <ul class="social-links">
-                <li><a href="#"><i class="fa-brands fa-github fa-xl"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-linkedin fa-xl"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-envelope fa-xl"></i></a></li>
+                <li><a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le profil Github">
+                    <i class="fa-brands fa-github fa-xl" aria-hidden="true"></i>
+                </a></li>
+                <li><a href="https://www.linkedin.com/in/blanche-peltier-aa6592223/" target="_blank" aria-label="Aller sur le profil Linkedin">
+                    <i class="fa-brands fa-linkedin fa-xl" aria-hidden="true"></i>
+                </a></li>
+                <li><a href="mailto:peltierblanche@gmail.com" aria-label="Envoyer un mail">
+                    <i class="fa-solid fa-envelope fa-xl" aria-hidden="true"></i>
+                </a></li>
             </ul>
 
             <div class="background-image hero-img"></div>
@@ -228,11 +234,17 @@
         <section>
             <h2 class="hidden">Réseaux Sociaux</h2>
 
-                <ul class="social-links">
-                    <li><a href="#"><i class="fa-brands fa-github fa-xl"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-linkedin fa-xl"></i></a></li>
-                    <li><a href="#"><i class="fa-solid fa-envelope fa-xl"></i></a></li>
-                </ul>
+            <ul class="social-links">
+                <li><a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le profil Github">
+                    <i class="fa-brands fa-github fa-xl" aria-hidden="true"></i>
+                </a></li>
+                <li><a href="https://www.linkedin.com/in/blanche-peltier-aa6592223/" target="_blank" aria-label="Aller sur le profil Linkedin">
+                    <i class="fa-brands fa-linkedin fa-xl" aria-hidden="true"></i>
+                </a></li>
+                <li><a href="mailto:peltierblanche@gmail.com" aria-label="Envoyer un mail">
+                    <i class="fa-solid fa-envelope fa-xl" aria-hidden="true"></i>
+                </a></li>
+            </ul>
         </section>
         <p>Design et création par Blanche Peltier</p>
     </footer>
