accessiblity checked, modified nav button to button instead of a & added aria label to links and aria-hidden to icons

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
                 <li><a href="#course">Formation</a></li>
                 <li><a href="#projects">Projets</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li class="button cvLink"><a href="#">CV</a></li>
+                <li class="button cvLink">
+                    <a href="https://drive.google.com/file/d/1_h-98KLV2MGtoFM4OZzObfjOx8cAY46T/view?usp=share_link" target="_blank">CV</a>
+                </li>
             </ul>
         </nav>
-        <a href="javascript:void(0);" class="navButton close" id="navButton"></a>
+        <button class="navButton close" id="navButton" aria-label="Ouvrir ou fermer la navigation"></button>
     </header>
     
     <main class="margin">
@@ -133,13 +135,13 @@
                 </ul>
                 <ul class="projects-actions left">
                     <li>
-                        <a href="#">
-                            <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com.">
+                        <a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
+                            <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <img src="assets/images/icons/open-window.svg" alt="Lien vers le site du projet.">
+                        <a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
+                            <img src="assets/images/icons/open-window.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
                         </a>
                     </li>
                 </ul>
@@ -160,36 +162,13 @@
                     </ul>
                     <ul class="projects-actions">
                         <li>
-                            <a href="#">
-                                <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com.">
+                            <a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
+                                <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
                             </a>
                         </li>
                         <li>
-                            <a href="#">
-                                <img src="assets/images/icons/open-window.svg" alt="Lien vers le site du projet.">
-                            </a>
-                        </li>
-                    </ul>
-                </article>
-                <article class="card project-card">
-                    <h5>Projet 1</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
-                    <ul class="skills-list">
-                        <li>html</li>
-                        <li>css</li>
-                        <li>js</li>
-                        <li>php</li>
-                        <li>api</li>
-                    </ul>
-                    <ul class="projects-actions">
-                        <li>
-                            <a href="#">
-                                <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com.">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="assets/images/icons/open-window.svg" alt="Lien vers le site du projet.">
+                            <a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
+                                <img src="assets/images/icons/open-window.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
                             </a>
                         </li>
                     </ul>
@@ -206,13 +185,36 @@
                     </ul>
                     <ul class="projects-actions">
                         <li>
-                            <a href="#">
-                                <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com.">
+                            <a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
+                                <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
                             </a>
                         </li>
                         <li>
-                            <a href="#">
-                                <img src="assets/images/icons/open-window.svg" alt="Lien vers le site du projet.">
+                            <a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
+                                <img src="assets/images/icons/open-window.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
+                            </a>
+                        </li>
+                    </ul>
+                </article>
+                <article class="card project-card">
+                    <h5>Projet 1</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
+                    <ul class="skills-list">
+                        <li>html</li>
+                        <li>css</li>
+                        <li>js</li>
+                        <li>php</li>
+                        <li>api</li>
+                    </ul>
+                    <ul class="projects-actions">
+                        <li>
+                            <a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
+                                <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
+                                <img src="assets/images/icons/open-window.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
                             </a>
                         </li>
                     </ul>
