started on desktop

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </div>
         <nav id="nav">
             <ul>
-                <li><a href="#course">Formation</a></li>
-                <li><a href="#projects">Projets</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#course"><span>01.</span> Formation</a></li>
+                <li><a href="#projects"><span>02.</span> Projets</a></li>
+                <li><a href="#contact"><span>03.</span> Contact</a></li>
                 <li class="button cvLink">
                     <a href="https://drive.google.com/file/d/1_h-98KLV2MGtoFM4OZzObfjOx8cAY46T/view?usp=share_link" target="_blank">CV</a>
                 </li>
@@ -28,7 +28,7 @@
         <button class="navButton close" id="navButton" aria-label="Ouvrir ou fermer la navigation"></button>
     </header>
     
-    <main class="margin">
+    <main class="margin container">
         <section class="layout hero card">
             <p class="body-ft-small">Salut, moi c'est</p>
             <h2>Blanche Peltier</h2>
