working on text content & some style polishing

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
             <section class="card course-card">
                 <h4>Développeuse Web Full Stack</h4>
                 <p>Avril 2023 - Octobre 2023</p>
-                <p>Titre RNCP niveau 5 obtenu</p>
+                <p>Titre délivré par 3W Academy (NSF 326) Niveau III(FR) 5 (EU) Arrêté du 25/01/2023 et inscrit au RNCP (37273)</p>
+                <p>Décerné le 8/11/2023</p>
 
                 <div class="languages-logos">
                     <img src="assets/images/icons/flowbite_html-solid.svg" alt="Logo of HTML language.">
@@ -94,54 +95,49 @@
             <h3><span class="numerotation">02.</span> Quelques créations</h3>
 
             <article class="layout main-project-card">
-                <h4>Projet 1</h4>
+                <h4>Mairie de Saint-Broladre</h4>
                 <div class="card right">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
+                    <p>Développement d'un site web pour une mairie, incluant un espace administratif permettant la gestion des inscriptions à la cantine et un espace pour les parents leur permettant d'y inscrire leurs enfants.</p>
                 </div>
                 <ul class="projects-actions right">
-                        <li>
-                            <a href="#">
-                                <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com.">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="assets/images/icons/open-window.svg" alt="Lien vers le site du projet.">
-                            </a>
-                        </li>
+                    <li>
+                        <a href="https://github.com/blnche/projet-mairie" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
+                            <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
+                        </a>
+                    </li>
                 </ul>
                 <div class="background-image project-img img1"></div>
                 <ul class="skills-list right">
                     <li>html</li>
                     <li>css</li>
+                    <li>scss</li>
                     <li>js</li>
                     <li>php</li>
-                    <li>api</li>
+                    <li>phpmyadmin</li>
                 </ul>
             </article>
 
             <article class="layout main-project-card">
-                <h4>Projet 1</h4>
+                <h4>Thème Wordpress</h4>
                 <div class="card left">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
+                    <p>Première réalisation de projet pour un client externe : développement d'un thème Wordpress sur mesure pour la mairie de Saint-Broladre.</p>
                 </div>
                 <div class="background-image project-img img2"></div>
                 <ul class="skills-list left">
-                    <li>html</li>
                     <li>css</li>
                     <li>js</li>
                     <li>php</li>
-                    <li>api</li>
+                    <li>wordpress</li>
                 </ul>
                 <ul class="projects-actions left">
                     <li>
-                        <a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
+                        <a href="https://github.com/blnche/mairie-saint-broladre-theme-wordpress" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
                             <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
                         </a>
                     </li>
                     <li>
-                        <a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
-                            <img src="assets/images/icons/open-window.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
+                        <a href="https://www.saint-broladre.bzh" target="_blank" aria-label="Aller sur le site du projet">
+                            <img src="assets/images/icons/open-window.svg" alt="Lien vers le site du projet" aria-hidden="true">
                         </a>
                     </li>
                 </ul>
@@ -151,59 +147,34 @@
                 <h4>Plus de projets</h4>
 
                 <article class="card project-card">
-                    <h5>Projet 1</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
+                    <h5>Mini-Jeux</h5>
+                    <p>Création de mini-jeux faciles à prendre en main sur portable ou ordinateur pour se divertir en attendant son train ou lors d'une pause. Intégration d'une API pour personnaliser l'expérience.</p>
                     <ul class="skills-list">
                         <li>html</li>
                         <li>css</li>
                         <li>js</li>
-                        <li>php</li>
                         <li>api</li>
                     </ul>
                     <ul class="projects-actions">
                         <li>
-                            <a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
+                            <a href="https://github.com/blnche/simple-games" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
                                 <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
                             </a>
                         </li>
                         <li>
-                            <a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
+                            <a href="https://blnche.github.io/simple-games/" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
                                 <img src="assets/images/icons/open-window.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
                             </a>
                         </li>
                     </ul>
                 </article>
                 <article class="card project-card">
-                    <h5>Projet 1</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
+                    <h5>Réseau Social de Voyage</h5>
+                    <p>Projet collaboratif de développement d'un réseau social où les utilisateurs peuvent organiser des voyages entre eux et suivre également ceux des autres.</p>
                     <ul class="skills-list">
-                        <li>html</li>
-                        <li>css</li>
-                        <li>js</li>
-                        <li>php</li>
-                        <li>api</li>
-                    </ul>
-                    <ul class="projects-actions">
-                        <li>
-                            <a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
-                                <img src="assets/images/icons/mingcute_github-line.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/blnche" target="_blank" aria-label="Aller sur le repositery du projet sur Github">
-                                <img src="assets/images/icons/open-window.svg" alt="Lien vers le repositery sur Github.com" aria-hidden="true">
-                            </a>
-                        </li>
-                    </ul>
-                </article>
-                <article class="card project-card">
-                    <h5>Projet 1</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis nulla quisquam, accusamus illum corporis.</p>
-                    <ul class="skills-list">
-                        <li>html</li>
-                        <li>css</li>
-                        <li>js</li>
-                        <li>php</li>
+                        <li>reactjs</li>
+                        <li>nodesjs</li>
+                        <li>mongodb</li>
                         <li>api</li>
                     </ul>
                     <ul class="projects-actions">
